# solvro_warsztaty

./: README.md  image_classifier_app.py  pyproject.toml
